fixes an alignment bug on .twitterStream’s link badge

--- a/frontend/ui/arboreal.style.less
+++ b/frontend/ui/arboreal.style.less
@@ -1438,7 +1438,6 @@
 			
 			a {
 
-
 				.inlineBlock;
 				.textDelimited;
 				
@@ -1451,6 +1450,8 @@
 				white-space: nowrap;
 				
 				position: relative;
+				
+				vertical-align: middle;
 				
 				:after {
 				
